--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>My First HTML / CSS</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1> 
+      HoneyBee Trove
+      </h1>
+      <h2> 
+      Categories
+      </h2>
+      <p>
+        1) Robotics <br>
+        2) Space exploration <br>
+        3) Rovers <br>
+        4) Spaceships <br>
+        </p>
     <script src="script.js"></script>
   </body>
 </html>
